--- a/pages/productos.html
+++ b/pages/productos.html
@@ -44,7 +44,7 @@
     </header>
     <main>
         <section class="productos">
-            <h2>¡Explora todas las posibilidades y despierta tus deseos con las mejores remeras de la galaxia!</h2>
+            <h2 class="producto-titulo">¡Explora todas las posibilidades y despierta tus deseos con las mejores remeras de la galaxia!</h2>
         </section>
         <section class="productos-grid">
             <div class="producto-main">
