--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="card" style="width: 18rem;">
                 <img src="./img/remeratres.png" class="card-img-top" alt="Modelo uno">
                 <div class="card-body">
-                    <h3 class="card-title titulo-prod">Remera lisa color celeste</h3>
+                    <h3 class="card-title titulo-prod">Remera lisa color celeste entallada</h3>
                     <p class="card-text parrafo-prod">$2.800,00</p>
                     <a href="" class="btn btn-dark boton-prod">Comprar</a>
                 </div>
