--- a/index.html
+++ b/index.html
@@ -5,14 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--META DESCRIPTION-->
+    <meta name="description" content="Descubre nuestra exclusiva colección de remeras urbanas que combinan estilo y comodidad a la perfección. Encuentra diseños auténticos que reflejen tu personalidad para que nunca dejes de brillar.">
+    <!--KEYWORDS-->
+    <meta name="keywords" content="ether, remeras, excelencia, exclusivo, beneficios, puntos, descuentos, diseño unico, precio, calidad, joven, original, brillar, envio a domicilio, estilo urbano, atencion personalizada, comodidad, autenticidad">
+    <!--PROTOCOLO OPEN GRAPH-->
+    <meta property="og:type" content="E-commerce">
+    <meta property="og:title" content="Ether | Iluminá tu estilo."> 
+    <meta property="og:url" content=""> 
+    <meta property="og:image" content=""> 
+    <meta property="og:description" content="Descubre nuestra exclusiva colección de remeras urbanas que combinan estilo y comodidad a la perfección. Encuentra diseños auténticos que reflejen tu personalidad para que nunca dejes de brillar."> 
     <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!--STYLE-->
-    <!--<link rel="stylesheet" href="./css/style.css">-->
     <link rel="stylesheet" href="./css/estilos.css">
-    <link rel="icon" href="./img/logoestrella.png">
-    <title>Ether</title>
+    <!--FAVICON-->
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <title>Ether | Iluminá tu estilo.</title>
 </head>
 
 <body>
