--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,14 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--META DESCRIPTION-->
+    <meta name="description" content="¡Estamos aquí para escucharte! Ponte en contacto con nosotros para cualquier consulta, sugerencia o comentario, y así poder seguir creciendo juntos y brindar el mejor servicio, para los mejores clientes.">
+    <!--KEYWORDS-->
+    <meta name="keywords" content="ether, remeras, excelencia, exclusivo, atencion personalizada, clientes, mejora, comentarios, sugerencias, contacto, redes">
+    <!--PROTOCOLO OPEN GRAPH-->
+    <meta property="og:type" content="E-commerce">
+    <meta property="og:title" content="Ether | Contacto"> 
+    <meta property="og:url" content=""> 
+    <meta property="og:image" content=""> 
+    <meta property="og:description" content="¡Estamos aquí para escucharte! Ponte en contacto con nosotros para cualquier consulta, sugerencia o comentario, y así poder seguir creciendo juntos y brindar el mejor servicio, para los mejores clientes.">
     <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!--STYLE-->
-    <!--<link rel="stylesheet" href="../css/style.css">-->
     <link rel="stylesheet" href="../css/estilos.css">
-    <link rel="icon" href="../img/logoestrella.png">
-    <title>Contacto</title>
+    <!--FAVICON-->
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+    <title>Ether | Contacto</title>
 </head>
 <body>
     <header>
