--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -4,14 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--META DESCRIPTION-->
+    <meta name="description" content="Descubre nuestras opciones de pago flexibles y el servicio de envío a domicilio, rápido y seguro. Disfruta de una experiencia de compra sin estrés, desde la elección de productos hasta la entrega final.">
+    <!--KEYWORDS-->
+    <meta name="keywords" content="ether, remeras, excelencia, exclusivo, pagos, tarjetas, efectivo, mercado pago, precio, brillar, envio a domicilio, rápido, seguro, atencion personalizada, comodidad.">
+    <!--PROTOCOLO OPEN GRAPH-->
+    <meta property="og:type" content="E-commerce">
+    <meta property="og:title" content="Ether | Información"> 
+    <meta property="og:url" content=""> 
+    <meta property="og:image" content=""> 
+    <meta property="og:description" content="Descubre nuestras opciones de pago flexibles y el servicio de envío a domicilio, rápido y seguro. Disfruta de una experiencia de compra sin estrés, desde la elección de productos hasta la entrega final.">
     <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!--STYLE-->
-    <!--<link rel="stylesheet" href="../css/style.css">-->
     <link rel="stylesheet" href="../css/estilos.css">
-    <link rel="icon" href="../img/logoestrella.png">
-    <title>Información</title>
+    <!--FAVICON-->
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+    <title>Ether | Información</title>
 </head>
 <body>
     <header>
