--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,14 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--META DESCRIPTION-->
+    <meta name="description" content="Te invitamos a adentrarte en nuestro universo. Comprometidos en ofrecerte calidad y autenticidad en cada prenda que elijas, para impongas el brillo que llevas dentro. Ven y descubre la esencia de quiénes somos.">
+    <!--KEYWORDS-->
+    <meta name="keywords" content="ether, remeras, excelencia, exclusivo, calidad, joven, original, brillar, compromiso, dedicacion, estilo urbano, atencion personalizada, comodidad, autenticidad, esencia.">
+    <!--PROTOCOLO OPEN GRAPH-->
+    <meta property="og:type" content="E-commerce">
+    <meta property="og:title" content="Ether | Nosotros"> 
+    <meta property="og:url" content=""> 
+    <meta property="og:image" content=""> 
+    <meta property="og:description" content="Te invitamos a adentrarte en nuestro universo. Comprometidos en ofrecerte calidad y autenticidad en cada prenda que elijas, para impongas el brillo que llevas dentro. Ven y descubre la esencia de quiénes somos.">
     <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!--STYLE-->
-    <!--<link rel="stylesheet" href="../css/style.css">-->
     <link rel="stylesheet" href="../css/estilos.css">
-    <link rel="icon" href="../img/logoestrella.png">
-    <title>Nosotros</title>
+    <!--FAVICON-->
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+    <title>Ether | Nosotros</title>
 </head>
 <body>
     <header>
