--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -4,14 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--META DESCRIPTION-->
+    <meta name="description" content="Descubre nuestro emocionante sistema de puntos y niveles de recompensas. ¡Compra y acumula puntos para acceder a descuentos, envíos gratuitos y regalos exclusivos en cada nivel! Únete hoy y disfruta de beneficios únicos mientras haces tus compras favoritas.">
+    <!--KEYWORDS-->
+    <meta name="keywords" content="ether, remeras, excelencia, exclusivo, beneficios, desucentos, puntos, niveles, envio gratis, regalos">
+    <!--PROTOCOLO OPEN GRAPH-->
+    <meta property="og:type" content="E-commerce">
+    <meta property="og:title" content="Ether | Mi Perfil"> 
+    <meta property="og:url" content=""> 
+    <meta property="og:image" content=""> 
+    <meta property="og:description" content="Descubre nuestro emocionante sistema de puntos y niveles de recompensas. ¡Compra y acumula puntos para acceder a descuentos, envíos gratuitos y regalos exclusivos en cada nivel! Únete hoy y disfruta de beneficios únicos mientras haces tus compras favoritas.">
     <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!--STYLE-->
-    <!--<link rel="stylesheet" href="../css/style.css">-->
     <link rel="stylesheet" href="../css/estilos.css">
-    <link rel="icon" href="../img/logoestrella.png">
-    <title>Mi Perfil</title>
+    <!--FAVICON-->
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+    <title>Ether | Mi Perfil</title>
 </head>
 <body>
     <header>
