--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,14 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--META DESCRIPTION-->
+    <meta name="description" content="Descubre nuestra amplia gama de productos. Encuentra el toque perfecto para tu estilo. Aquí encontrarás la conjunción ideal de calidad y las últimas tendencias, todo en un único lugar.">
+    <!--KEYWORDS-->
+    <meta name="keywords" content="ether, remeras, excelencia, exclusivo, diseño unico, precio, calidad, joven, original, brillar, estilo urbano, comodidad, autenticidad, estampadas, lisas">
+    <!--PROTOCOLO OPEN GRAPH-->
+    <meta property="og:type" content="E-commerce">
+    <meta property="og:title" content="Ether | Productos"> 
+    <meta property="og:url" content=""> 
+    <meta property="og:image" content=""> 
+    <meta property="og:description" content="Descubre nuestra amplia gama de productos. Encuentra el toque perfecto para tu estilo. Aquí encontrarás la conjunción ideal de calidad y las últimas tendencias, todo en un único lugar.">
     <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!--STYLE-->
-    <!--<link rel="stylesheet" href="../css/style.css">-->
     <link rel="stylesheet" href="../css/estilos.css">
-    <link rel="icon" href="../img/logoestrella.png">
-    <title>Productos</title>
+    <!--FAVICON-->
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+    <title>Ether | Productos</title>
 </head>
 <body>
     <header>
