--- a/index.html
+++ b/index.html
@@ -62,19 +62,18 @@
     <main>
         <section class=hero>
             <h1>Creá tu propio estilo. Brillá con Ether</h1>
-            <img src="./img/modelohero1.jpg" alt="Modelos" class="imagenuno">
-            <img src="./img/modelohero.jpg" alt="Modelos" class="imagendos">
+            <img src="./img/modelohero1.jpg" alt="Remeras lisas de varios colores" class="imagenuno">
+            <img src="./img/modelohero.jpg" alt="Modelo de remera con estampa" class="imagendos">
             <p>¡La mejor calidad y diseños únicos, pensados para vos!</p>
-            <br>
             <p>¡Explora un universo que fusiona tu autenticidad con una comodidad inigualable. Descubre nuestra
-                colección que te hará destacar en cualquier ocasión. ¡Compra ahora y encuentra tu look perfecto!</p>
+            colección que te hará destacar en cualquier ocasión. ¡Compra ahora y encuentra tu look perfecto!</p>
         </section>
         <section class="productos">
             <h2>¡La excelencia en su máxima expresión: los productos más codiciados del mercado!</h2>
         </section>
         <section class="prod-flex">
             <div class="card" style="width: 18rem;">
-                <img src="./img/remerauno.png" class="card-img-top" alt="Modelo uno">
+                <img src="./img/remerauno.png" class="card-img-top" alt="Remera estampada al frente">
                 <div class="card-body">
                     <h3 class="card-title titulo-prod">Remera con estampa chica al frente</h3>
                     <p class="card-text parrafo-prod">$3.200,00</p>
@@ -82,7 +81,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="./img/remerados.png" class="card-img-top" alt="Modelo uno">
+                <img src="./img/remerados.png" class="card-img-top" alt="Remera estampada dorso">
                 <div class="card-body">
                     <h3 class="card-title titulo-prod">Remera con estampa grande al dorso</h3>
                     <p class="card-text parrafo-prod">$3.800,00</p>
@@ -90,7 +89,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="./img/remeratres.png" class="card-img-top" alt="Modelo uno">
+                <img src="./img/remeratres.png" class="card-img-top" alt="Remera lisa de color entallada">
                 <div class="card-body">
                     <h3 class="card-title titulo-prod">Remera lisa color celeste entallada</h3>
                     <p class="card-text parrafo-prod">$2.800,00</p>
@@ -98,7 +97,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="./img/camisa.png" class="card-img-top" alt="Modelo uno">
+                <img src="./img/camisa.png" class="card-img-top" alt="Remera estampada al frente">
                 <div class="card-body">
                     <h3 class="card-title titulo-prod">Remera con estampa grande al frente</h3>
                     <p class="card-text parrafo-prod">$3.900,00</p>
@@ -127,7 +126,7 @@
         <p>Conocé más sobre nosotros en nuestras redes!</p>
         <section class="footer-container">
             <div>
-                <img src="./img/logoestrella.png" alt="Logo" class="footer-logo">
+                <img src="./img/logoestrella.png" alt="Logo Ether" class="footer-logo">
             </div>
             <div>
                 <a href="https://www.facebook.com/" target="_blank"><img src="./img/facebook.png" alt="Logo Facebook"
