--- a/pages/productos.html
+++ b/pages/productos.html
@@ -58,73 +58,73 @@
         </section>
         <section class="productos-grid">
             <div class="producto-main">
-                <img src="../img/remeracinco.png" alt="Modelo cinco">
+                <img src="../img/remeracinco.png" alt="Remera estampada al frente">
                 <h3>Remera con estampa grande al frente</h3>
                 <p>$3.900,00</p>
                 <a href="">Comprar</a>
             </div>
             <div class="producto-main">
-                <img src="../img/remeraseis.png" alt="Modelo seis">
+                <img src="../img/remeraseis.png" alt="Remera lisa de color entallada">
                 <h3>Remera lisa varios colores</h3>
                 <p>$3.000,00</p>
                 <a href="">Comprar</a>
             </div>
             <div class="producto-main">
-                <img src="../img/remerasiete.png" alt="Modelo siete">
+                <img src="../img/remerasiete.png" alt="Remera estampada al frente">
                 <h3>Remera con estampa chica al frente</h3>
                 <p>$3.200,00</p>
                 <a href="">Comprar</a>
             </div>
             <div class="producto-main">
-                <img src="../img/remeraocho.png" alt="Modelo ocho">
+                <img src="../img/remeraocho.png" alt="Remera estampada al frente">
                 <h3>Remera con estampa grande al frente</h3>
                 <p>$3.900,00</p>
                 <a href="">Comprar</a>
             </div>
             <div class="producto-main">
-                <img src="../img/remeranueve.png" alt="Modelo nueve">
+                <img src="../img/remeranueve.png" alt="Remera estampada al dorso">
                 <h3>Remera con estampa chica al dorso</h3>
                 <p>$3.500,00</p>
                 <a href="">Comprar</a>
             </div>
             <div class="producto-main">
-                <img src="../img/remeradiez.png" alt="Modelo diez">
+                <img src="../img/remeradiez.png" alt="Remera estampada al dorso">
                 <h3>Remera con estampa chica al dorso</h3>
                 <p>$3.500,00</p>
                 <a href="">Comprar</a>
             </div>
             <div class="producto-main">
-                <img src="../img/remeraonce.png" alt="Modelo once">
+                <img src="../img/remeraonce.png" alt="Remera estampada al frente">
                 <h3>Remera con estampa grande al frente</h3>
                 <p>$3.900,00</p>
                 <a href="">Comprar</a>
             </div>
             <div class="producto-main">
-                <img src="../img/remeradoce.png" alt="Modelo doce">
+                <img src="../img/remeradoce.png" alt="Remera estampada al dorso">
                 <h3>Remera con estampa grande al dorso</h3>
                 <p>$3.800,00</p>
                 <a href="">Comprar</a>
             </div>
             <div class="producto-main">
-                <img src="../img/remeratrece.png" alt="Modelo trece">
+                <img src="../img/remeratrece.png" alt="Remera lisa de color con bolsillo">
                 <h3>Remera lisa con bolsillo</h3>
                 <p>$3.300,00</p>
                 <a href="">Comprar</a>
             </div>
             <div class="producto-main">
-                <img src="../img/remeracatorce.png" alt="Modelo catorce">
+                <img src="../img/remeracatorce.png" alt="Remera estampada al frente">
                 <h3>Remera con estampa chica al frente</h3>
                 <p>$3.200,00</p>
                 <a href="">Comprar</a>
             </div>
             <div class="producto-main">
-                <img src="../img/remeraquince.png" alt="Modelo quince">
+                <img src="../img/remeraquince.png" alt="Remera estampada al dorso">
                 <h3>Remera con estampa grande al dorso</h3>
                 <p>$3.800,00</p>
                 <a href="">Comprar</a>
             </div>
             <div class="producto-main">
-                <img src="../img/remeradieciseis.png" alt="Modelo dieciseis">
+                <img src="../img/remeradieciseis.png" alt="Remera estampada al dorso">
                 <h3>Remera con estampa grande al dorso</h3>
                 <p>$3.800,00</p>
                 <a href="">Comprar</a>
@@ -135,7 +135,7 @@
         <p>Conocé más sobre nosotros en nuestras redes!</p>
         <section class="footer-container">
             <div>
-                <img src="../img/logoestrella.png" alt="Logo" class="footer-logo">
+                <img src="../img/logoestrella.png" alt="Logo Ether" class="footer-logo">
             </div>
             <div>
                 <a href="https://www.facebook.com/" target="_blank"><img src="../img/facebook.png" alt="Logo Facebook" class="social"></a>
