--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -110,7 +110,7 @@
         <p>Conocé más sobre nosotros en nuestras redes!</p>
         <section class="footer-container">
             <div>
-                <img src="../img/logoestrella.png" alt="Logo" class="footer-logo">
+                <img src="../img/logoestrella.png" alt="Logo Ether" class="footer-logo">
             </div>
             <div>
                 <a href="https://www.facebook.com/" target="_blank"><img src="../img/facebook.png" alt="Logo Facebook" class="social"></a>
