--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -80,6 +80,7 @@
             <div>
                 <h3>Nacionalidad</h3>
                 <select name="" id="">País
+                    <option value="" disabled selected>Selecciona tu país</option>
                     <option value="">Argentina</option>
                     <option value="">Chile</option>
                     <option value="">Uruguay</option>
@@ -89,7 +90,7 @@
             </div>
             <br>
             <div>
-                Sos cliente frecunte?
+                <h3>Sos cliente frecunte?</h3>
                 <label for="cliente">Si</label>
                 <input type="radio" name="cliente">
                 <label for="cliente">No</label>
@@ -101,8 +102,8 @@
                 <textarea name="" id="" cols="30" rows="10"></textarea>
             </div>
             <div>
-                <input type="submit">
-                <input type="reset">
+                <input class="btn-form" type="submit">
+                <input class="btn-form" type="reset">
             </div>
         </form>
     </main>
