--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -10,9 +10,9 @@
     <meta name="keywords" content="ether, remeras, excelencia, exclusivo, atencion personalizada, clientes, mejora, comentarios, sugerencias, contacto, redes">
     <!--PROTOCOLO OPEN GRAPH-->
     <meta property="og:type" content="E-commerce">
-    <meta property="og:title" content="Ether | Contacto"> 
-    <meta property="og:url" content=""> 
-    <meta property="og:image" content=""> 
+    <meta property="og:title" content="Ether | Contacto">
+    <meta property="og:url" content="https://ether1.netlify.app/pages/contacto">
+    <meta property="og:image" content="https://ether1.netlify.app/img/logoestrella.png">
     <meta property="og:description" content="¡Estamos aquí para escucharte! Ponte en contacto con nosotros para cualquier consulta, sugerencia o comentario, y así poder seguir creciendo juntos y brindar el mejor servicio, para los mejores clientes.">
     <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
