--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -10,9 +10,9 @@
     <meta name="keywords" content="ether, remeras, excelencia, exclusivo, pagos, tarjetas, efectivo, mercado pago, precio, brillar, envio a domicilio, rápido, seguro, atencion personalizada, comodidad.">
     <!--PROTOCOLO OPEN GRAPH-->
     <meta property="og:type" content="E-commerce">
-    <meta property="og:title" content="Ether | Información"> 
-    <meta property="og:url" content=""> 
-    <meta property="og:image" content=""> 
+    <meta property="og:title" content="Ether | Información">
+    <meta property="og:url" content="https://ether1.netlify.app/pages/informacion">
+    <meta property="og:image" content="https://ether1.netlify.app/img/logoestrella.png">
     <meta property="og:description" content="Descubre nuestras opciones de pago flexibles y el servicio de envío a domicilio, rápido y seguro. Disfruta de una experiencia de compra sin estrés, desde la elección de productos hasta la entrega final.">
     <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
