--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -10,9 +10,9 @@
     <meta name="keywords" content="ether, remeras, excelencia, exclusivo, calidad, joven, original, brillar, compromiso, dedicacion, estilo urbano, atencion personalizada, comodidad, autenticidad, esencia.">
     <!--PROTOCOLO OPEN GRAPH-->
     <meta property="og:type" content="E-commerce">
-    <meta property="og:title" content="Ether | Nosotros"> 
-    <meta property="og:url" content=""> 
-    <meta property="og:image" content=""> 
+    <meta property="og:title" content="Ether | Nosotros">
+    <meta property="og:url" content="https://ether1.netlify.app/pages/perfil">
+    <meta property="og:image" content="https://ether1.netlify.app/img/logoestrella.png">
     <meta property="og:description" content="Te invitamos a adentrarte en nuestro universo. Comprometidos en ofrecerte calidad y autenticidad en cada prenda que elijas, para impongas el brillo que llevas dentro. Ven y descubre la esencia de quiénes somos.">
     <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
