--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -10,9 +10,9 @@
     <meta name="keywords" content="ether, remeras, excelencia, exclusivo, beneficios, desucentos, puntos, niveles, envio gratis, regalos">
     <!--PROTOCOLO OPEN GRAPH-->
     <meta property="og:type" content="E-commerce">
-    <meta property="og:title" content="Ether | Mi Perfil"> 
-    <meta property="og:url" content=""> 
-    <meta property="og:image" content=""> 
+    <meta property="og:title" content="Ether | Mi Perfil">
+    <meta property="og:url" content="https://ether1.netlify.app/pages/perfil">
+    <meta property="og:image" content="https://ether1.netlify.app/img/logoestrella.png">
     <meta property="og:description" content="Descubre nuestro emocionante sistema de puntos y niveles de recompensas. ¡Compra y acumula puntos para acceder a descuentos, envíos gratuitos y regalos exclusivos en cada nivel! Únete hoy y disfruta de beneficios únicos mientras haces tus compras favoritas.">
     <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
