--- a/pages/productos.html
+++ b/pages/productos.html
@@ -10,9 +10,9 @@
     <meta name="keywords" content="ether, remeras, excelencia, exclusivo, diseño unico, precio, calidad, joven, original, brillar, estilo urbano, comodidad, autenticidad, estampadas, lisas">
     <!--PROTOCOLO OPEN GRAPH-->
     <meta property="og:type" content="E-commerce">
-    <meta property="og:title" content="Ether | Productos"> 
-    <meta property="og:url" content=""> 
-    <meta property="og:image" content=""> 
+    <meta property="og:title" content="Ether | Productos">
+    <meta property="og:url" content="https://ether1.netlify.app/pages/productos">
+    <meta property="og:image" content="https://ether1.netlify.app/img/logoestrella.png">
     <meta property="og:description" content="Descubre nuestra amplia gama de productos. Encuentra el toque perfecto para tu estilo. Aquí encontrarás la conjunción ideal de calidad y las últimas tendencias, todo en un único lugar.">
     <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
