--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <meta name="keywords" content="ether, remeras, excelencia, exclusivo, beneficios, puntos, descuentos, diseño unico, precio, calidad, joven, original, brillar, envio a domicilio, estilo urbano, atencion personalizada, comodidad, autenticidad">
     <!--PROTOCOLO OPEN GRAPH-->
     <meta property="og:type" content="E-commerce">
-    <meta property="og:title" content="Ether | Iluminá tu estilo."> 
-    <meta property="og:url" content=""> 
-    <meta property="og:image" content=""> 
+    <meta property="og:title" content="Ether | Iluminá tu estilo.">
+    <meta property="og:url" content="https://ether1.netlify.app/">
+    <meta property="og:image" content="https://ether1.netlify.app/img/logoestrella.png">
     <meta property="og:description" content="Descubre nuestra exclusiva colección de remeras urbanas que combinan estilo y comodidad a la perfección. Encuentra diseños auténticos que reflejen tu personalidad para que nunca dejes de brillar."> 
     <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
