--- a/pages/productos.html
+++ b/pages/productos.html
@@ -61,73 +61,85 @@
                 <img src="../img/remeracinco.png" alt="Remera estampada al frente">
                 <h3>Remera con estampa grande al frente</h3>
                 <p>$3.900,00</p>
-                <a href="">Comprar</a>
+                <a href="">Ver mas</a>
+                <a href="">Agregar al carrito</a>
             </div>
             <div class="producto-main">
                 <img src="../img/remeraseis.png" alt="Remera lisa de color entallada">
                 <h3>Remera lisa varios colores</h3>
                 <p>$3.000,00</p>
-                <a href="">Comprar</a>
+                <a href="">Ver mas</a>
+                <a href="">Agregar al carrito</a>
             </div>
             <div class="producto-main">
                 <img src="../img/remerasiete.png" alt="Remera estampada al frente">
                 <h3>Remera con estampa chica al frente</h3>
                 <p>$3.200,00</p>
-                <a href="">Comprar</a>
+                <a href="">Ver mas</a>
+                <a href="">Agregar al carrito</a>
             </div>
             <div class="producto-main">
                 <img src="../img/remeraocho.png" alt="Remera estampada al frente">
                 <h3>Remera con estampa grande al frente</h3>
                 <p>$3.900,00</p>
-                <a href="">Comprar</a>
+                <a href="">Ver mas</a>
+                <a href="">Agregar al carrito</a>
             </div>
             <div class="producto-main">
                 <img src="../img/remeranueve.png" alt="Remera estampada al dorso">
                 <h3>Remera con estampa chica al dorso</h3>
                 <p>$3.500,00</p>
-                <a href="">Comprar</a>
+                <a href="">Ver mas</a>
+                <a href="">Agregar al carrito</a>
             </div>
             <div class="producto-main">
                 <img src="../img/remeradiez.png" alt="Remera estampada al dorso">
                 <h3>Remera con estampa chica al dorso</h3>
                 <p>$3.500,00</p>
-                <a href="">Comprar</a>
+                <a href="">Ver mas</a>
+                <a href="">Agregar al carrito</a>
             </div>
             <div class="producto-main">
                 <img src="../img/remeraonce.png" alt="Remera estampada al frente">
                 <h3>Remera con estampa grande al frente</h3>
                 <p>$3.900,00</p>
-                <a href="">Comprar</a>
+                <a href="">Ver mas</a>
+                <a href="">Agregar al carrito</a>
             </div>
             <div class="producto-main">
                 <img src="../img/remeradoce.png" alt="Remera estampada al dorso">
                 <h3>Remera con estampa grande al dorso</h3>
                 <p>$3.800,00</p>
-                <a href="">Comprar</a>
+                <a href="">Ver mas</a>
+                <a href="">Agregar al carrito</a>
             </div>
             <div class="producto-main">
                 <img src="../img/remeratrece.png" alt="Remera lisa de color con bolsillo">
                 <h3>Remera lisa con bolsillo</h3>
                 <p>$3.300,00</p>
-                <a href="">Comprar</a>
+                <a href="">Ver mas</a>
+                <a href="">Agregar al carrito</a>
             </div>
             <div class="producto-main">
                 <img src="../img/remeracatorce.png" alt="Remera estampada al frente">
                 <h3>Remera con estampa chica al frente</h3>
                 <p>$3.200,00</p>
-                <a href="">Comprar</a>
+                <a href="">Ver mas</a>
+                <a href="">Agregar al carrito</a>
             </div>
             <div class="producto-main">
                 <img src="../img/remeraquince.png" alt="Remera estampada al dorso">
                 <h3>Remera con estampa grande al dorso</h3>
                 <p>$3.800,00</p>
-                <a href="">Comprar</a>
+                <a href="">Ver mas</a>
+                <a href="">Agregar al carrito</a>
             </div>
             <div class="producto-main">
                 <img src="../img/remeradieciseis.png" alt="Remera estampada al dorso">
                 <h3>Remera con estampa grande al dorso</h3>
                 <p>$3.800,00</p>
-                <a href="">Comprar</a>
+                <a href="">Ver mas</a>
+                <a href="">Agregar al carrito</a>
             </div>
         </section>
     </main>
