--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!--STYLE-->
     <link rel="stylesheet" href="./css/estilos.css">
+    <script src="js/main.js" defer></script>
     <!--FAVICON-->
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <title>Ether | Iluminá tu estilo.</title>
@@ -54,6 +55,24 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#Contacto">Contacto</a>
                         </li>
+                        <li class="submenu">
+                            <img src="img/cart.png" alt="">
+                            <div id="carrito" class="cont-carrito">
+                                <table id="shop-list" class="table">
+                                    <thead>
+                                        <tr>
+                                            <th>Imagen</th>
+                                            <th>Producto</th>
+                                            <th>Precio</th>
+                                            <th>Cantidad</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                    </tbody>
+                                    </table>
+                                <button id="vaciar-carrito">Vaciar carrito</button>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -77,7 +96,8 @@
                 <div class="card-body">
                     <h3 class="card-title titulo-prod">Remera con estampa chica al frente</h3>
                     <p class="card-text parrafo-prod">$3.200,00</p>
-                    <a href="" class="btn btn-dark boton-prod">Comprar</a>
+                    <a href="" class="btn btn-dark boton-prod">Ver mas</a>
+                    <a href="" class="btn btn-dark boton-prod">Agregar al carrito</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
@@ -85,7 +105,8 @@
                 <div class="card-body">
                     <h3 class="card-title titulo-prod">Remera con estampa grande al dorso</h3>
                     <p class="card-text parrafo-prod">$3.800,00</p>
-                    <a href="" class="btn btn-dark boton-prod">Comprar</a>
+                    <a href="" class="btn btn-dark boton-prod">Ver mas</a>
+                    <a href="" class="btn btn-dark boton-prod">Agregar al carrito</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
@@ -93,7 +114,8 @@
                 <div class="card-body">
                     <h3 class="card-title titulo-prod">Remera lisa color celeste entallada</h3>
                     <p class="card-text parrafo-prod">$2.800,00</p>
-                    <a href="" class="btn btn-dark boton-prod">Comprar</a>
+                    <a href="" class="btn btn-dark boton-prod">Ver mas</a>
+                    <a href="" class="btn btn-dark boton-prod">Agregar al carrito</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
@@ -101,12 +123,13 @@
                 <div class="card-body">
                     <h3 class="card-title titulo-prod">Remera con estampa grande al frente</h3>
                     <p class="card-text parrafo-prod">$3.900,00</p>
-                    <a href="" class="btn btn-dark boton-prod">Comprar</a>
+                    <a href="" class="btn btn-dark boton-prod">Ver mas</a>
+                    <a href="" class="btn btn-dark boton-prod">Agregar al carrito</a>
                 </div>
             </div>
         </section>
         <section class="productos">
-            <p class="catalogo">Visita y enamorate de nuestro catalogo <a href="./pages/productos.html">aquí</a></p>
+            <p class="catalogo">Visitá y enamorate de nuestro catálogo <a href="./pages/productos.html">aquí</a></p>
         </section>
         <section class="progreso">
             <h2>¡Aumenta tu nivel y obten beneficios!</h2>
